set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
if(BUILD_TESTING)
  add_executable(simple_test simple_test.c)
  target_link_libraries(simple_test PRIVATE "${PROJECT_NAME}" Threads::Threads)
  # add_test(NAME simple_test COMMAND $<TARGET_FILE:simple_test>)
  # set_tests_properties(simple_test PROPERTIES EXCLUDE_FROM_ALL TRUE)

  add_executable(test_concurrency test_concurrency.c)
  target_link_libraries(test_concurrency PRIVATE "${PROJECT_NAME}" Threads::Threads)
  # add_test(NAME test_concurrency COMMAND $<TARGET_FILE:test_concurrency>)
  # set_tests_properties(test_concurrency PROPERTIES EXCLUDE_FROM_ALL TRUE)
  
  add_executable(test_seek_equal_or_less test_seek_equal_or_less.c)
  target_link_libraries(test_seek_equal_or_less PRIVATE "${PROJECT_NAME}" log Threads::Threads)
  # add_test(NAME test_seek_equal_or_less COMMAND $<TARGET_FILE:test_seek_equal_or_less>)
  # set_tests_properties(test_seek_equal_or_less PROPERTIES EXCLUDE_FROM_ALL TRUE)
  
  add_executable(test_updates test_updates.c)
  target_link_libraries(test_updates PRIVATE "${PROJECT_NAME}" log Threads::Threads)
  # add_test(NAME test_updates COMMAND $<TARGET_FILE:test_updates>)
  # set_tests_properties(test_updates PROPERTIES EXCLUDE_FROM_ALL TRUE)
endif()
